--- a/app/views/v6/l3/users/view/all.html
+++ b/app/views/v6/l3/users/view/all.html
@@ -25,7 +25,7 @@
     <table class="govuk-table">
         <thead class="govuk-table__head">
             <tr class="govuk-table__row">
-                <th scope="col" class="govuk-table__header govuk-!-width-one-third">Name <span class="govuk-sorted-by">(Currently sorted by name, a-z)</span></th>
+                <th scope="col" class="govuk-table__header govuk-!-width-one-third">Name</th>
                 <th scope="col" class="govuk-table__header govuk-!-width-one-third">Email address</th>
                 <th scope="col" class="govuk-table__header">Status</th>
             </tr>
@@ -46,61 +46,61 @@
 
             <tr class="govuk-table__row">
                 <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Chris Fairclough</a></th>
-                <td class="govuk-table__cell">chris.fairclough@capita.co.uk</td>
+                <td class="govuk-table__cell">chris.fairclough@{{ data['prototype-organisation-machine'] }}</td>
                 <td class="govuk-table__cell">Active</td>
             </tr>
 
             <tr class="govuk-table__row">
                 <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Chris Whyte</a></th>
-                <td class="govuk-table__cell">chris.whyte@capita.co.uk</td>
+                <td class="govuk-table__cell">chris.whyte@{{ data['prototype-organisation-machine'] }}</td>
                 <td class="govuk-table__cell">Invite sent</td>
             </tr>
 
             <tr class="govuk-table__row">
                 <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">David Batty</a></th>
-                <td class="govuk-table__cell">david.batty@capita.co.uk</td>
+                <td class="govuk-table__cell">david.batty@{{ data['prototype-organisation-machine'] }}</td>
                 <td class="govuk-table__cell">Access expired</td>
             </tr>
 
             <tr class="govuk-table__row">
                 <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Gary McAllister</a></th>
-                <td class="govuk-table__cell">gary.mcallister@capita.co.uk</td>
+                <td class="govuk-table__cell">gary.mcallister@{{ data['prototype-organisation-machine'] }}</td>
                 <td class="govuk-table__cell">Active</td>
             </tr>
 
             <tr class="govuk-table__row">
                 <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Gary Speed</a></th>
-                <td class="govuk-table__cell">gary.speed@capita.co.uk</td>
+                <td class="govuk-table__cell">gary.speed@{{ data['prototype-organisation-machine'] }}</td>
                 <td class="govuk-table__cell">Access expired</td>
             </tr>
 
             <tr class="govuk-table__row">
                 <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Gordon Strachan</a></th>
-                <td class="govuk-table__cell">gordon.strachan@capita.co.uk</td>
+                <td class="govuk-table__cell">gordon.strachan@{{ data['prototype-organisation-machine'] }}</td>
                 <td class="govuk-table__cell">Invite sent</td>
             </tr>
 
             <tr class="govuk-table__row">
                 <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">John Lukic</a></th>
-                <td class="govuk-table__cell">john.lukic@capita.co.uk</td>
+                <td class="govuk-table__cell">john.lukic@{{ data['prototype-organisation-machine'] }}</td>
                 <td class="govuk-table__cell ">Active</td>
             </tr>
 
             <tr class="govuk-table__row">
                 <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Jon Newsome</a></th>
-                <td class="govuk-table__cell">jon.newsome@capita.co.uk</td>
+                <td class="govuk-table__cell">jon.newsome@{{ data['prototype-organisation-machine'] }}</td>
                 <td class="govuk-table__cell">Access expired</td>
             </tr>
 
             <tr class="govuk-table__row">
                 <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Lee Chapman</a></th>
-                <td class="govuk-table__cell">lee.chapman@capita.co.uk</td>
+                <td class="govuk-table__cell">lee.chapman@{{ data['prototype-organisation-machine'] }}</td>
                 <td class="govuk-table__cell">Active</td>
             </tr>
 
             <tr class="govuk-table__row">
                 <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Mel Sterland</a></th>
-                <td class="govuk-table__cell">mel.sterland@capita.co.uk</td>
+                <td class="govuk-table__cell">mel.sterland@{{ data['prototype-organisation-machine'] }}</td>
                 <td class="govuk-table__cell">Active</td>
             </tr>
         </tbody>
