--- a/app/views/v6/l2/orgs/add/start.html
+++ b/app/views/v6/l2/orgs/add/start.html
@@ -15,7 +15,7 @@
 {% block content %}
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
-            <form action="address-check" method="post" class="form">
+            <form action="confirmation" method="post" class="form">
                 {{ govukFieldset({
                     legend: {
                     html: '<span class="govuk-caption-l">Add an organisation</span>Organisation name',
