Update org hint text

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -55,7 +55,7 @@
                                     text: "Organisation"
                                 },
                                 hint: {
-                                    text: "Used on admin registration journey emails"
+                                    text: "Used on admin registration journey emails and organisation admin/standard user dashboard journeys"
                                 },
                                 items: [
                                     {
