--- a/app/views/v6/l2/users/register/complete.html
+++ b/app/views/v6/l2/users/register/complete.html
@@ -21,17 +21,34 @@
 {% endblock %}
 
 {% block content %}
+
+
+    {% set panelContent %}
+        Admin for {{ data["prototype-service"] }} 
+    {% endset %}
+
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
             {{ govukPanel({
                 titleText: "Registration complete",
-                html: data['prototype-service']
+                html: panelContent   
             }) }}
 
-            <p>You will be able to access this service soon. We will send you an email when you have access.</p>
+
+            <h2 class="govuk-heading-m govuk-!-margin-top-6"> What happens next</h2>
+            <p>We will send you an email with instructions on how to sign in.</p>
+
 
             <h2 class="govuk-heading-m govuk-!-margin-top-6">Your username</h2>
-            <p>Your username to sign in will be b2ctest77@gmail.com</p>
+            <p>When you sign in, your username will be b2ctest77@gmail.com</p>
+
+            <h2 class="govuk-heading-m govuk-!-margin-top-6">Your permissions</h2>
+            <p>You will be able to use DWP Authenticate to:</p>
+
+            <ul class="govuk-list govuk-list--bullet">
+                <li>give people access to {{ data['prototype-service'] }} and manage their access</li>
+                <li>add organisations, such as a local authority or contractor, so that their employees can use {{ data['prototype-service'] }}</li>
+            </ul>
 
             <h2 class="govuk-heading-m">Contact us</h2>
 
