Content changes to register confirmation email

--- a/app/views/v6/l2/users/register/complete.html
+++ b/app/views/v6/l2/users/register/complete.html
@@ -35,14 +35,14 @@
             }) }}
 
 
-            <h2 class="govuk-heading-s"> What happens next</h2>
+            <h2 class="govuk-heading-m govuk-!-margin-top-6"> What happens next</h2>
             <p>We will send you an email with instructions on how to sign in.</p>
 
 
-            <h2 class="govuk-heading-s">Your username</h2>
+            <h2 class="govuk-heading-m govuk-!-margin-top-6">Your username</h2>
             <p>When you sign in, your username will be b2ctest77@gmail.com</p>
 
-            <h2 class="govuk-heading-s">Your permissions</h2>
+            <h2 class="govuk-heading-m govuk-!-margin-top-6">Your permissions</h2>
             <p>You will be able to use DWP Authenticate to:</p>
 
             <ul class="govuk-list govuk-list--bullet">
@@ -50,7 +50,7 @@
                 <li>add organisations, such as a local authority or contractor, so that their employees can use {{ data['prototype-service'] }}</li>
             </ul>
 
-            <h2 class="govuk-heading-s">Contact us</h2>
+            <h2 class="govuk-heading-m">Contact us</h2>
 
             {% if data['prototype-service'] == 'PRaP' %}
                 <p>PRaP Operational Support Team</p>
