--- a/app/views/v6/l4/users/register/resend-code.html
+++ b/app/views/v6/l4/users/register/resend-code.html
@@ -25,7 +25,12 @@
         <div class="govuk-grid-column-two-thirds">
             <h1 class="govuk-heading-l">Send me a new code</h1>
 
-            <p>We will send you a text message with a new code.</p>
+            <p>We will send a text message to {{ data['mobile-number-code'] }} with a new code.</p>
+
+            {{ govukDetails({
+                summaryText: "This phone number is wrong",
+                text: "To enter a new number, click the link in your invitation email to register again."
+            }) }}
 
             {{ govukButton({
                 text: "Send new text message",
