Updates to changes list on index

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -184,6 +184,18 @@
                 <li>
                     Stripped back 'add org' journey to only take organisation name until we know more about how these will work.
                 </li>
+                <li>
+                    Amended the register <a href="/v6/l2/users/register/complete">confirmation page</a> to make it that user has signed up to admin portal
+                </li>
+                <li>
+                    Reintegrated <a href="/v6/l3/dashboard">L3 Organisation admin</a> user journeys from prototype v3
+                </li>
+                <li>
+                    Amended <a href="/v6/l2/users/register/password">password creation</a> based on UR findings
+                </li>
+                <li>
+                    Amended <a href="/v6/l2/users/register/code">2FA</a> code based on UR findings
+                </li>
             </ul>
 
 
