--- a/app/views/index.html
+++ b/app/views/index.html
@@ -185,7 +185,7 @@
                     Stripped back 'add org' journey to only take organisation name until we know more about how these will work.
                 </li>
                 <li>
-                    Amended the register <a href="/v6/l2/users/register/complete">confirmation page</a> to make it that user has signed up to admin portal
+                    Amended the register <a href="/v6/l2/users/register/complete">confirmation page</a> to make it clear that user has signed up to admin portal
                 </li>
                 <li>
                     Reintegrated <a href="/v6/l3/dashboard">L3 Organisation admin</a> user journeys from prototype v3
